# grimoirelab-graal

./: .flake8  .gitignore  .travis.yml  AUTHORS  KNOWN_ISSUES.txt  NEWS  README.md  build_and_install.sh  install.sh  pyproject.toml  requirements.txt  requirements_dev.txt  run_tests.sh  setup.cfg  setup.py
.github/workflows/: changelog.yml  ci.yml  release.yml  tests.yml
docs/: getting-started.md
graal/: __init__.py  _version.py  codecomplexity.py  errors.py  graal.py  util.py
graal/analyzers/: cloc.py  lizard.py
graal/backends/: __init__.py
graal/backends/core/: __init__.py  analyzer_composition_factory.py  cocom.py  cocom_old.py  codep.py  colang.py  colic.py  composer.py  coqua.py  covuln.py
graal/backends/core/analyzers/: analyzer.py  bandit.py  cloc.py  cqmetrics-names.tsv  flake8.py  jadolint.py  linguist.py  lint.py  lizard.py  nomos.py  pylint.py  qmcalc.py  reverse.py  scancode.py  scc.py
graal/backends/core/analyzers/libs/: nomossa
graal/backends/core/cocom/: __init__.py  cocom.py  cocom_analyzer_factory.py
graal/backends/core/cocom/compositions/: __init__.py  composition_lizard_file.py  composition_lizard_repository.py  composition_scc_file.py  composition_scc_repository.py
graal/backends/core/codep/: __init__.py  codep.py
graal/backends/core/codep/compositions/: __init__.py  composition_jadolint_dependencies.py  composition_reverse.py
graal/backends/core/colang/: __init__.py  colang.py  colang_analyzer_factory.py
graal/backends/core/colic/: __init__.py  colic.py
graal/backends/core/coqua/: __init__.py  coqua.py
graal/backends/core/covuln/: __init__.py  covuln.py
releases/: 0.3.0.md  0.3.1.md  0.3.2-rc.1.md  0.3.2-rc.2.md  0.3.2-rc.3.md  0.3.2-rc.4.md  0.3.2-rc.5.md  0.3.2-rc.6.md  0.3.2-rc.7.md  0.3.2-rc.8.md  0.3.2-rc.9.md  0.3.2.md  0.4.0.md  0.4.1-rc.1.md  0.4.1-rc.2.md  0.4.1-rc.3.md  0.4.1.md  0.4.10-rc.1.md  0.4.10-rc.2.md  0.4.10.md  0.4.11-rc.1.md  0.4.11.md  0.4.12-rc.1.md  0.4.12.md  0.4.13-rc.1.md  0.4.13.md  0.4.14-rc.1.md  0.4.14-rc.2.md  0.4.14.md  0.4.15-rc.1.md  0.4.15.md  0.4.16-rc.1.md  0.4.16.md  0.4.17-rc.1.md  0.4.17.md  0.4.18-rc.1.md  0.4.18.md  0.4.19-rc.1.md  0.4.19.md  0.4.2.md  (+89 more)
releases/unreleased/: 0.2.10.yml  fix-error-in-update-worktree.yml  update-flake8-dependencies.yml  update-markdown-it-py-version.yml  update-package-dependencies.yml
releases/unreleased/processed/: compatible-namespace-package-for-python-312.yml
tests/: base_analyzer.py  base_graal.py  base_repo.py  mini_test.py  run_tests.py  test_analyzer.py  test_analyzer_composition_factory.py  test_bandit.py  test_case_analyzer.py  test_cloc.py  test_cocom.py  test_cocom_factory.py  test_codecomplexity.py  test_codep.py  test_colang.py  test_colang_factory.py  test_colic.py  test_coqua.py  test_covuln.py  test_flake8.py  test_graal.py  test_jadolint.py  test_linguist.py  test_lint.py  test_lizard.py  test_nomos.py  test_pylint.py  test_qmcalc.py  test_reverse.py  test_scancode.py  test_scc.py  utils.py
tests/data/: Dockerfile  sample_code.c  sample_code.py
tests/data/analyzers/: test_code_analyzer.py
(+13 files in other folders)
