[tool.poetry]
name = "graal"
version = "0.4.24-rc.1"
description = "A generic source code analyzer"
authors = [
    "GrimoireLab Developers"
]
license = "GPL-3.0+"

readme = "README.md"

homepage = "https://chaoss.github.io/grimoirelab/"
repository = "https://github.com/chaoss/grimoirelab-graal"

keywords = [
    "development",
    "grimoirelab"
]

packages = [
    { include = "graal" },
    { include = "tests", format = "sdist" },
]

include = [
    { path = "AUTHORS", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "NEWS", format = "sdist" },
]

classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
   "Intended Audience :: Science/Research",
   "Topic :: Software Development",
   "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
   "Programming Language :: Python :: 3"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chaoss/grimoirelab-graal/issues"

[tool.poetry.scripts]
graal = 'graal.bin.graal:main'

[tool.poetry.dependencies]
python = "^3.8"
lizard = "1.16.6"
pylint = ">=1.8.4"
flake8 = "^4.0.1"
networkx = ">=2.1"
pydot = ">=1.2.4"
bandit = ">=1.4.0"
perceval = { version = ">=0.19", allow-prereleases = true }
grimoirelab-toolkit = { version = ">=0.3", allow-prereleases = true}
cloc = "^0.2.5"
execnet = "^1.9.0"

# Pinned because 'myst-parser = ^1.0.0' in Perceval
markdown-it-py = "^2.0.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
coverage = "^7.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
